--- a/static-site/london.html
+++ b/static-site/london.html
@@ -29,22 +29,13 @@
     </div>
   </nav>
   <div class="container-fluid justify-content-center text-center mt-3">
-    <div id="image"><img id="display_image" class="img-fluid"></div>
-    <div id="tag_"></div>
+    <div id="welcome">
+        <h1 class="display-1">Welcome to AWS Summit London</h1>
+        <h2 class="display-4">Thanks for joining <b>Defending your Serverless App against the OWASP top 10</b></h2>
+    </div>
+    <div id="image"><img id="display_image" class="img-fluid" src="./images/london.png"></div>
   </div>
   <!-- Bootstrap Core JavaScript -->
   <script src="js/bootstrap.min.js"></script>
-  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.15.min.js"></script>
-  <script src="js/config.js" type="text/javascript"></script>
-  <script src="js/s3_gallery.js" type="text/javascript"></script>
-  <script>
-    var urlParams = new URLSearchParams(window.location.search);
-    photo_id = urlParams.get('id');
-    var src="https://s3-eu-west-1.amazonaws.com/owasp10-demo/" + photo_id;
-    display_image.src = src;
-    var tags = document.getElementById('tag_');
-    tags.id = tags.id + photo_id;
-    getTags(photo_id);
-  </script>
 </body>
 </html>
